--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <html>Hello Git!</html> 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>我的網站</title>
+  </head>
+  <body>
+    <h1>歡迎來到我的網站！</h1>
+    <a href="777777.html">點擊這裡查看 777777.html 的內容</a>
+  </body>
+</html>
