--- a/777777.html
+++ b/777777.html
@@ -13,7 +13,7 @@
 
       <script src="1010101.js"></script>
     
-      <div style="
+      <button style="
         position: fixed;
         bottom: 20px;
         right: 20px;
@@ -25,9 +25,10 @@
         justify-content: center;
         align-items: center;
         font-size: 30px;
-      ">
-        ↑
-      </div>
+      " onclick="handle_click(this)">
+        𖤂
+      </button>
+      <div onclick="console.log('Button clicked')"></div>
     
         <!--基本標籤-->
         <h1 style="font-size: 50pt;">人生解題</h1>
@@ -100,4 +101,3 @@
        <textarea placeholder="回報問題"></textarea>
     </body>
 </html>
-
